@@ -1,25 +1,22 @@
 /**
  * Copyright (C) 2000 - 2012 Silverpeas
  *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
+ * This program is free software: you can redistribute it and/or modify it under the terms of the
+ * GNU Affero General Public License as published by the Free Software Foundation, either version 3
+ * of the License, or (at your option) any later version.
  *
- * As a special exception to the terms and conditions of version 3.0 of
- * the GPL, you may redistribute this Program in connection with Free/Libre
- * Open Source Software ("FLOSS") applications as described in Silverpeas's
- * FLOSS exception.  You should have received a copy of the text describing
- * the FLOSS exception, and it is also available here:
+ * As a special exception to the terms and conditions of version 3.0 of the GPL, you may
+ * redistribute this Program in connection with Free/Libre Open Source Software ("FLOSS")
+ * applications as described in Silverpeas's FLOSS exception. You should have received a copy of the
+ * text describing the FLOSS exception, and it is also available here:
  * "http://www.silverpeas.org/docs/core/legal/floss_exception.html"
  *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
+ * even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+ * Affero General Public License for more details.
  *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ * You should have received a copy of the GNU Affero General Public License along with this program.
+ * If not, see <http://www.gnu.org/licenses/>.
  */
 
 package com.silverpeas.components.organizationchart.view;
@@ -29,7 +26,10 @@ import java.net.URLEncoder;
 import java.util.List;
 import java.util.Map;
 
+import org.apache.commons.lang3.CharEncoding;
+
 public class OrganizationBox {
+
   private String name = null;
   private String dn = null;
   private String parentDn = null;
@@ -37,7 +37,7 @@ public class OrganizationBox {
 
   private boolean detailLinkActive = false;
   private boolean centerLinkActive = false;
-  
+
   private String specificCSSClass = "";
   private Map<String, String> details = null;
 
@@ -124,10 +124,10 @@ public class OrganizationBox {
    * @throws UnsupportedEncodingException
    */
   public String getParentUrl() throws UnsupportedEncodingException {
-    if (parentDn == null)
+    if (parentDn == null) {
       return "";
-    else
-      return "Main?baseOu=" + URLEncoder.encode(parentDn, "UTF-8");
+    }
+    return "Main?baseOu=" + URLEncoder.encode(parentDn, CharEncoding.UTF_8);
   }
 
   public void setSpecificCSSClass(String specificCSSClass) {
@@ -137,7 +137,7 @@ public class OrganizationBox {
   public String getSpecificCSSClass() {
     return specificCSSClass;
   }
-  
+
   public Map<String, String> getDetails() {
     return details;
   }
